feat: update swagger and fix tests
